@@ -1,5 +1,8 @@
 2020-04-14  Patrick Palka  <ppalka@redhat.com>
 
+	PR c++/85278
+	* g++.dg/concepts/diagnostic9.C: New test.
+
 	PR c++/94034
 	* g++.dg/cpp0x/constexpr-empty15.C: New test.
 	* g++.dg/cpp1y/constexpr-nsdmi6a.C: New test.
