@@ -1,3 +1,9 @@
+2020-04-14  Patrick Palka  <ppalka@redhat.com>
+
+	PR c++/85278
+	* c-pretty-print.c (pp_c_pointer) <case REFERENCE_TYPE>: Print a double
+	ampersand if it's an rvalue reference type.
+
 2020-04-13  Martin Sebor  <msebor@redhat.com>
 
 	PR c/92326
